--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,9 @@
     </style>
 
 
-    <title></title>
+    <title>
+        <%= title %>
+    </title>
 </head>
 
 <body class=" bg-white text-gray-700  poppins-extrabold">
