--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,31 +3,52 @@
         <h1 class="text-4xl text-gray-700 font-bold  mt-8">Dashboard</h1>
         <h2 class="text-xl text-gray-700 font-bold mt-4">Welcome <%= user.username %>
         </h2>
-        <div class="grid grid-cols-3 gap-4 mt-8">
-            <% if (typeof posts !="undefined" ) { %>
-                <% posts.forEach(function(post) { %>
-                    <div class="border p-4">
-                        <h2 class="text-xl font-bold">
-                            <%= post.title %>
-                        </h2>
-                        <p>
-                            <%= post.body %>
-                        </p>
-                    </div>
-                    <% }); %>
-                        <% } else { %>
-                            <h2 class="text-xl font-bold text-center">No posts yet</h2>
-                            <% } %>
+        <h3 class="text-lg font-bold mt-4">Membership Status</h3>
+        <h4 class="text-sm text-gray-500">Membership: <%= membership ? "Active" : "Inactive" %>
+        </h4>
+        <div class="mt-8 divide-y">
+
+            <h3 class="text-lg font-bold">Your Posts</h3>
+            <h4 class="text-sm text-gray-500"></h4>
+
+        </div>
+        <div class="mt-8">
+            <% if (typeof userPosts !="undefined" && userPosts.length> 0) { %>
+                <div class="space-y-6">
+                    <% userPosts.forEach(function(post) { %>
+                        <div class="border p-4 rounded-md max-w-xl mx-auto">
+                            <div class="flex items-center">
+                                <img src="<%= userAvatar %>" alt="avatar" class="w-12 h-12 object-cover rounded-full">
+                                <h3 class="font-bold text-md ml-4">
+                                    <%= user.username %>
+                                </h3>
+                            </div>
+
+                            <h2 class="text-xl font-bold mt-4">
+                                <%= post.title %>
+                            </h2>
+                            <p class="mt-2">
+                                <%= post.content %>
+                            </p>
+
+                        </div>
+                        <% }); %>
+                </div>
+                <% } else { %>
+                    <h2 class="text-xl font-bold text-center mt-8">No posts yet</h2>
+                    <% } %>
         </div>
 
         <div class="mt-8">
-            <a href="/dashboard/membership"
-                class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Membership</a>
+            <% if (!membership) { %>
+                <a href="/dashboard/membership"
+                    class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Membership</a>
+                <% } %>
         </div>
 
 
         <div class="mt-8">
-            <a href="/posts/create"
+            <a href="/dashboard/createPost"
                 class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Create
                 Post</a>
             <button
