--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <div class="container mx-auto">
   <h1 class="text-4xl text-gray-700 font-bold text-center mt-8">Posts</h1>
-  <div class="mt-8">
+  <div class="mt-8 mb-8">
     <% if (typeof allPosts !="undefined" && allPosts.length> 0) { %>
       <div class="space-y-6">
         <% allPosts.forEach(function(post) { %>
@@ -19,7 +19,11 @@
                 <% } else { %>
                   <div class="flex flex-col justify-center ml-4">
                     <h3 class="font-bold text-md">
-                      Anonymous
+                      <% if (user && user.username === post.user.username) { %>
+                        <%= user.username %>
+                        <% } else { %>
+                          Anonymous
+                          <% } %>
                     </h3>
                     <p class="text-xs">Membership required to view user</p>
                     </small>
@@ -31,7 +35,7 @@
               <%= post.title %>
             </h2>
             <p class="mt-2">
-              <%= post.content.replace(/'/g, '\\\'') %>
+              <%= post.content %>
             </p>
 
           </div>
