--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,12 +25,13 @@
 
 <body class=" bg-white text-gray-700  poppins-extrabold">
 
-    <header class="text-gray-700 border p-4">
-        <div class="container mx-auto flex justify-between items-center">
+    <header class="text-gray-700 border md:p-4 max-md:pt-4">
+        <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
             <a href="/" class="
-            text-3xl font-bold"><span class="text-indigo-500">Members</span>only</a>
-            <nav>
-                <ul class="flex space-x-6">
+            text-3xl font-bold pb-4"><span class="text-indigo-500">Members</span>only</a>
+            <nav class="max-sm:bg-gray-700 max-sm:w-full max-sm:text-white max-sm:p-4 
+            ">
+                <ul class="flex max-md:items-center flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-6 max-sm:flex max-sm:flex-col max-sm:gap-4">
                     <li>
                         <a href="/" class="font-bold">Posts</a>
                     </li>
