--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,6 +36,15 @@
                                 <%= post.content %>
                             </p>
 
+                            <% if (user && user.admin) { %>
+                                <form action="/deletePost" method="post">
+                                    <input type="hidden" name="postId" value="<%= post._id %>">
+                                    <button type="submit"
+                                        class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4">
+                                        <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+                                </form>
+                                <% } %>
                         </div>
                         <% }); %>
                 </div>
@@ -48,11 +57,15 @@
             <% if (!membership) { %>
                 <a href="/dashboard/membership"
                     class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Membership</a>
-                <% } %>
+                <% } else{ %>
+                    <a href="/dashboard/admin"
+                        class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                        An admin </a>
+                    <% } %>
         </div>
 
 
-        <div class="mt-8">
+        <div class="my-4">
             <a href="/dashboard/createPost"
                 class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Create
                 Post</a>
