--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,7 +25,9 @@
 
 <body class=" bg-white text-gray-700  poppins-extrabold">
 
-    <header class="text-gray-700 border md:p-4 max-md:pt-4">
+    <header class="text-gray-700 border md:p-4 max-md:pt-4
+    sticky top-0 bg-white z-10 shadow-md
+    ">
         <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
             <a href="/" class="
             text-3xl font-bold pb-4"><span class="text-indigo-500">Members</span>only</a>
