--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <div class="flex justify-center items-center h-screen">
     <div class="w-full max-w-md">
         <%- include('./partials/messages.ejs') %>
-            <form action="/login" method="POST" class="bg-slate-50 shadow-lg rounded px-8 pt-6 pb-8 mb-4">
+            <form action="/login" method="POST" style="background-color: #F6F5F2;" class=" shadow-lg rounded px-8 pt-6 pb-8 mb-4">
                 <div class="mb-4 flex items-center space-x-2">
                     <label for="username" class="block text-gray-700 text-sm font-bold mb-2 mr-2"><i
                             class="fas fa-user"></i></label>
