--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <div class="flex justify-center items-center h-screen">
     <div class="w-full max-w-lg">
         <%- include('partials/messages') %>
-            <form action="/register" method="POST" class="bg-slate-50 shadow-md rounded-md px-8 pt-6 pb-8 mb-4">
+            <form action="/register" method="POST" style="background-color: #F6F5F2;" class=" shadow-md rounded-md px-8 pt-6 pb-8 mb-4">
 
                 <div class="mb-4 flex flex-col space-y-2">
                     <label for="username" class="block text-gray-700 text-sm ">Username</label>
