style: responsive login and register pages

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,6 @@
-<div class="flex justify-center items-center h-screen">
+<div class="flex justify-center items-center h-screen max-sm:h-3/4 
+max-md:mx-4
+">
     <div class="w-full max-w-lg">
         <%- include('partials/messages') %>
             <form action="/register" method="POST" style="background-color: #F6F5F2;" class=" shadow-md rounded-md px-8 pt-6 pb-8 mb-4">
