--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,7 +23,9 @@
     </title>
 </head>
 
-<body class=" bg-white text-gray-700  poppins-extrabold">
+<body class=" bg-white text-gray-700  poppins-extrabold
+h-screen
+">
 
     <header class="text-gray-700 border md:p-4 max-md:pt-4
     sticky top-0 bg-white z-10 shadow-md
